--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-watch": "^5.0.1",
     "node-sass": "^4.12.0"
+  },
+  "dependencies": {
+    "yall-js": "^3.1.2"
   }
 }
